--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,22 +4,29 @@
     "description": "",
     "main": "server/server.js",
     "scripts": {
-        "start": "node server/server.js",
-        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-        "install": "cd server && npm i && cd ../client && npm i",
-        "build": "cd client && npm run build",
-        "render-build": "npm install && npm run build"
+      "start": "node server/server.js",
+      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+      "install": "cd server && npm i && cd ../client && npm i",
+      "build": "cd client && npm run build",
+      "render-build": "npm install && npm run build"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "concurrently": "^5.1.0"
+      "concurrently": "^5.1.0",
+      "nodemon": "^2.0.22"
     },
     "dependencies": {
-        "apollo-server-express": "^3.13.0",
-        "graphql": "^16.9.0",
-        "react-bootstrap": "^2.10.4",
-        "react-router-dom": "^6.25.1"
+      "apollo-server-express": "^3.13.0",
+      "bcrypt": "^5.1.1",
+      "dotenv": "^16.4.5",
+      "express": "^4.19.2",
+      "graphql": "^16.9.0",
+      "jsonwebtoken": "^9.0.2",
+      "mongoose": "^8.5.1",
+      "react-bootstrap": "^2.10.4",
+      "react-router-dom": "^6.25.1"
     }
-}
+  }
+  
